@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-13T16:23:35Z",
-  "count_outdated" : 385,
-  "uniques_outdated" : 222,
-  "count" : 418,
+  "timestamp" : "2022-07-14T01:28:15Z",
+  "count_outdated" : 387,
+  "uniques_outdated" : 223,
+  "count" : 419,
   "uniques" : 241,
   "clones" : [
-    {
-      "timestamp": "2022-06-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-30T00:00:00Z",
       "count": 2,
